force-app/main/default/objects/MyUH__c/MyUH__c.object-meta.xml
<CustomObject>
    <description>set of university object</description>
    <label>MyUh</label>
    <nameField>
        <label>MyUH Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Myuhs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>