force-app/main/default/objects/MyUH__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <description>Please enter your complete address which includes street , Apt #, county , state  and zip code</description>
    <inlineHelpText>Please enter your complete address which includes street , Apt #, county , state  and zip code</inlineHelpText>
    <label>Contact Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>