force-app/main/default/objects/MyUH__c/fields/Cougar_ID__c.field-meta.xml
<CustomField>
    <fullName>Cougar_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Please enter your student ID</inlineHelpText>
    <label>Cougar ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>