force-app/main/default/objects/MyUH__c/fields/course__c.field-meta.xml
<CustomField>
    <fullName>course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>course</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) AND 3) OR 4</booleanFilter>
        <filterItems>
            <field>$Source.Deapartment__c</field>
            <operation>equals</operation>
            <valueField>course__c.master__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Deapartment__c</field>
            <operation>equals</operation>
            <valueField>course__c.master__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Deapartment__c</field>
            <operation>equals</operation>
            <valueField>course__c.master__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Deapartment__c</field>
            <operation>equals</operation>
            <valueField>course__c.master__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>course__c</referenceTo>
    <relationshipLabel>Myuhs</relationshipLabel>
    <relationshipName>Myuhs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>