force-app/main/default/objects/MyUH__c/fields/Deapartment__c.field-meta.xml
<CustomField>
    <fullName>Deapartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.School__c</field>
            <operation>equals</operation>
            <valueField>Deapartment__c.school__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Deapartment__c</referenceTo>
    <relationshipLabel>Myuhs</relationshipLabel>
    <relationshipName>Myuhs</relationshipName>
    <type>Lookup</type>
</CustomField>