force-app/main/default/objects/MyUH__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>school</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Myuhs</relationshipLabel>
    <relationshipName>Myuhs</relationshipName>
    <type>Lookup</type>
</CustomField>