force-app/main/default/objects/MyUH__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <inlineHelpText>Please give first name space last name and do not include middle name</inlineHelpText>
    <label>Student Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>